# khiin-rs

./: .gitattributes  .gitignore  .swift-format  .taurignore  Cargo.toml  LICENSE  Makefile.toml  README-TAI-HAN.md  README-TAI-LO.md  README.md  build.rs  rustfmt.toml
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: EngineController.cpp
android/app/src/main/kotlin/be/chiahpa/khiin/: Khiin.kt  (+3 more)
android/app/src/main/res/drawable/: backspace.xml  keyboard_return.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: method.xml
android/rust/: Cargo.toml
android/rust/src/: lib.rs
app/client/: Cargo.toml
app/client/src/: app.rs  main.rs
app/client/src/app/: macros.rs  routes.rs  wasm.rs
app/client/src/app/screens/: appearance.rs  home.rs  input.rs  user_dictionary.rs
app/client/styles/: app.scss  base.scss  slider.scss
app/settings/: Cargo.toml
app/settings/src/: lib.rs  settings.rs
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
cli/: Cargo.toml
cli/src/: app.rs  cli.rs  engine_ctrl.rs  keys.rs  main.rs
khiin/: Cargo.toml
khiin/dbgen/: Cargo.toml
khiin/dbgen/src/: clap.rs  main.rs
khiin/src/: buffer.rs  config.rs  data.rs  db.rs  engine.rs  input.rs  lib.rs  syllable.rs  utils.rs
khiin/src/buffer/: action_elem.rs  buffer.rs  buffer_element.rs  buffer_mgr.rs  insertable.rs  khiin_elem.rs  spacer.rs  string_elem.rs  tai_text.rs
khiin/src/config/: conf.rs  engine_cfg.rs
khiin/src/data/: conversion.rs  database.rs  dictionary.rs  models.rs  segmenter.rs  syllable_trie.rs  trie.rs
khiin/src/db/: database.rs  init.rs  models.rs
khiin/src/db/init/: csv.rs  data.rs  sql_gen.rs
khiin/src/db/migrations/001/: up.sql
khiin/src/db/models/: conversion.rs  input.rs  key_conversion.rs  key_sequence.rs  lookup.rs
khiin/src/db/sql/: insert_conversions.sql  insert_inputs.sql  insert_key_sequences.sql  select_all_words_by_freq.sql  select_conversions.sql  select_conversions_by_hanji.sql  select_conversions_by_lomaji.sql  select_conversions_for_multiple.sql  select_conversions_for_tone.sql  select_conversions_for_tone_by_hanji.sql  select_conversions_for_tone_by_lomaji.sql  select_conversions_for_word.sql  select_conversions_for_word_by_hanji.sql  select_conversions_for_word_by_lomaji.sql
khiin/src/input/: converter.rs  lomaji.rs  parser.rs  syllable.rs  tokenizer.rs  tone.rs  unicode.rs
khiin/src/tests/: mock_protos.rs  mod.rs
protos/: Cargo.toml  build.rs
protos/src/: command.proto  config.proto  lib.rs
swift/bridge/: Cargo.toml  build.rs  build.sh
swift/bridge/src/: lib.rs
windows/: Cargo.toml  README.md  build.rs  guids.txt  rustfmt.toml
windows/app/: Cargo.toml  index.html
windows/app/locales/en-US/: main.ftl
windows/app/public/: styles.css
windows/app/src/: app.rs  locales.rs  main.rs
windows/app/src-tauri/: Cargo.toml  tauri.conf.json
windows/ime/: Cargo.toml  build.rs  ime.rc
windows/ime/src/: dll.rs  engine.rs  geometry.rs  lib.rs  locales.rs  resource.rs  tip.rs  ui.rs  utils.rs
windows/ime/src/engine/: engine_coordinator.rs  message_handler.rs
windows/ime/src/reg/: registrar.rs  settings.rs
windows/ime/src/tip/: candidate_list_ui.rs  class_factory.rs  compartment.rs  composition_mgr.rs  composition_utils.rs  display_attributes.rs  edit_session.rs  key_event.rs  key_event_sink.rs  lang_bar_indicator.rs  preserved_key_mgr.rs  sink_mgr.rs  text_edit_sink.rs  text_service.rs  thread_mgr_event_sink.rs
windows/ime/src/ui/: candidates.rs  colors.rs  dpi.rs  dwm.rs  render_factory.rs  window.rs  wndproc.rs
windows/ime/src/ui/candidates/: candidate_window.rs  layout.rs  metrics.rs  pager.rs  renderer.rs
windows/ime/src/ui/systray/: systray_menu.rs  systray_menu_item.rs  systray_menu_metrics.rs
windows/ime/src/utils/: arc_lock.rs  clone_inner.rs  hwnd.rs  macros.rs  pcwstr.rs  win.rs  wpreedit.rs
windows/installer/: Defines.wxi  Product.wxs  Registry.wxs  build.ps1  en-us.wxl  license.rtf  zh-tw.wxl
windows/res/: ime.rc  resource.h  settings.rc
windows/service/: Cargo.toml
windows/service/src/: engine_handler.rs  main.rs  server.rs
windows/settings/: Cargo.toml  build.rs  resource.h  settings.exe.manifest  settings.rc
windows/settings/src/: locales.rs  main.rs  pages.rs  propsheet.rs  propsheetpage.rs  resource.rs  style_page.rs  windowsx.rs  winuser.rs
windows/settings/src/app/: locales.rs  macros.rs  propsheet.rs  windowsx.rs
windows/settings/src/app/pages/: about_page.rs  input_page.rs  propsheetpage.rs  style_page.rs  userdict_page.rs
windows/settings/src/pages/: about_page.rs  input_page.rs  propsheetpage.rs  style_page.rs  userdict_page.rs
windows/src/: config.rs  dll.rs  geometry.rs  lib.rs  reg.rs  resource.rs  tip.rs  ui.rs  utils.rs
windows/src/engine/: engine_coordinator.rs  message_handler.rs
windows/src/locales/: en.yml  oan-hanl.yml
windows/src/protos/: mod.rs
windows/src/reg/: guids.rs  hkey.rs  reg_dll.rs  registrar.rs  settings.rs
windows/src/tip/: candidate_list_ui.rs  class_factory.rs  compartment.rs  compartment_event_sink.rs  composition_mgr.rs  composition_sink.rs  composition_utils.rs  display_attribute_info.rs  display_attribute_info_enum.rs  display_attribute_provider.rs  edit_session.rs  engine_mgr.rs  key_event.rs  key_event_sink.rs  key_handlers.rs  lang_bar_indicator.rs  mod.rs  preserved_key_mgr.rs  sink_mgr.rs  text_edit_sink.rs  text_layout_sink.rs  text_service.rs  thread_focus_sink.rs  thread_mgr_event_sink.rs
windows/src/ui/: candidate_window.rs  candidates.rs  colors.rs  dpi.rs  dwm.rs  popup_menu.rs  popup_menu_item.rs  render_factory.rs  systray.rs  window.rs  wndproc.rs
windows/src/ui/candidates/: candidate_window.rs  grid.rs  layout.rs  metrics.rs  pager.rs
windows/src/ui/systray/: systray_menu.rs  systray_menu_item.rs  systray_menu_metrics.rs
windows/src/utils/: arc_lock.rs  clone_inner.rs  com_ptr_cell.rs  macros.rs  mod.rs  win.rs  wpreedit.rs
(+209 files in other folders)
