[package]
name = "khiin-windows"
version = "0.1.0"
edition = "2021"
authors = ["Ko An Iong <aiongtaigi@gmail.com"]
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
once_cell = "1.17.1"
protobuf = "3.2.0"
num = "0.4.0"
khiin-protos = { git = "https://github.com/aiongg/khiin-protos.git", branch = "master" }

[dependencies.windows]
version = "0.46.0"
features = [
    "implement",
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-resource = "2.0"
