[package]
name = "khiin_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
crossterm = "0.26.1"
env_logger.workspace = true
khiin.workspace = true
khiin_protos.workspace = true
log.workspace = true
protobuf.workspace = true
unicode-width = "0.1.10"
