[package]
name = "khiin"
version = "0.1.0"
edition = "2021"
authors = ["Ko An Iong <aiongtaigi@gmail.com"]
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.70"
bit-vec = "0.6.3"
enum_dispatch = "0.3.11"
khiin_protos = { path = "../protos" }
lazy-regex = "2.5.0"
once_cell = "1.17.1"
protobuf = "3.2.0"
qp-trie = "0.8.1"
regex = "1.7.3"
rusqlite = { version = "0.29.0", features = [ "backup" ] }
unicode-normalization = "0.1.22"
