[package]
name = "khiin"
version = "0.1.0"
edition = "2021"
authors = ["Ko An Iong <aiongtaigi@gmail.com"]
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
bit-vec = "0.6.3"
enum_dispatch = "0.3.11"
khiin_protos.workspace = true
lazy-regex = "2.5.0"
log.workspace = true
once_cell.workspace = true
protobuf.workspace = true
qp-trie = "0.8.1"
regex.workspace = true
rusqlite = { workspace = true, features = [ "backup", "bundled" ] }
unicode-normalization = "0.1.22"

[dev-dependencies]
env_logger.workspace = true
test-log = "0.2.11"
