[package]
name = "khiin"
version = "0.1.0"
edition = "2021"
authors = ["Ko An Iong <aiongtaigi@gmail.com"]
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
anyhow.workspace = true
bit-vec.workspace = true
csv.workspace = true
enum_dispatch.workspace = true
itertools.workspace = true
khiin_data.workspace = true
khiin_ji.workspace = true
khiin_protos.workspace = true
log.workspace = true
once_cell.workspace = true
protobuf.workspace = true
qp-trie.workspace = true
regex.workspace = true
rusqlite = { workspace = true, features = [ "backup", "bundled" ] }
rusqlite_migration.workspace = true
serde = { workspace = true, features = ["derive"] }
unicode-normalization.workspace = true

[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true

[features]
default = []
db_cli = []