[package]
name = "khiin_protos"
version = "0.1.0"
edition = "2021"
authors = ["Ko An Iong <aiongtaigi@gmail.com"]
publish = false
build = "build.rs"

[lib]
crate-type = ["lib"]

[dependencies]
protobuf = "3.2.0"
futures = "0.3.28"

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"
