[package]
name = "khiin_protos"
version = "0.1.0"
edition = "2021"
authors = ["Ko An Iong <aiongtaigi@gmail.com"]
publish = false
build = "build.rs"

[lib]
crate-type = ["lib"]

[dependencies]
protobuf.workspace = true
futures.workspace = true

[build-dependencies]
protobuf-codegen.workspace = true
protoc-bin-vendored.workspace = true
