[package]
name = "khiin_windows"
version = "0.1.0"
edition = "2021"
authors = ["Ko An Iong <aiongtaigi@gmail.com"]
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
once_cell = "1.17.1"

[dependencies.windows]
version = "0.46.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-resource = "2.0"
