[package]
name = "khiin_droid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
android_log = "0.1.3"
env_logger = "0.10.0"
jni = "0.21.1"
khiin = { path = "../../khiin" }
khiin_protos = { path = "../../protos" }
log = "0.4.17"
protobuf = "3.2.0"
