[package]
name = "khiin_app_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fluent-bundle = "0.15.2"
fluent-templates = "0.8.0"
gloo-console = "0.2.3"
js-sys = "0.3"
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
unic-langid = "0.9.1"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
khiin_settings = { path = "../settings" }
