[package]
name = "khiin_settings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.4"
toml.workspace = true
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
