[package]
name = "khiin_app"
version = "0.1.0"
description = "Khíín Desktop Companion App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
khiin_settings.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.2", features = ["shell-open"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
win_dbg_logger.workspace = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
