[package]
name = "khiin_db_cli"
version = "0.1.0"
edition = "2021"
authors = ["Ko An Iong <aiongtaigi@gmail.com"]
publish = false

[dependencies]
khiin = { workspace = true, features = ["db_cli"] }
log.workspace = true
# simple_logger.workspace = true
simplelog = "0.12"
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
