[package]
name = "khiin_swift"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
khiin = { path = "../../khiin" }
khiin_protos = { path = "../../protos" }
# Using github until next version is released
swift-bridge = { git = "https://github.com/chinedufn/swift-bridge.git", branch = "master" }

[build-dependencies]
# Using github until next version is released
swift-bridge-build = { git = "https://github.com/chinedufn/swift-bridge.git", branch = "master" }
