[package]
name = "khiin_windows"
version = "0.1.0"
edition = "2021"
authors = ["Ko An Iong <aiongtaigi@gmail.com"]
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
futures.workspace = true
interprocess = { workspace = true, features = ["tokio_support"] }
log.workspace = true
num.workspace = true
once_cell.workspace = true
protobuf.workspace = true
win_dbg_logger.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
stdext = "0.3.1"
toml.workspace = true
tokio = { workspace = true, features = ["full"] }

khiin.workspace = true
khiin_protos.workspace = true

[dependencies.windows]
version = "0.48.0"
features = [
    "implement",
    "Foundation_Numerics",
    "UI",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-resource = "2.1.1"
