[package]
name = "khiin_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
futures.workspace = true
interprocess = { workspace = true, features = ["tokio_support"] }
tokio = { workspace = true, features = ["full"] }
protobuf.workspace = true
khiin.workspace = true
khiin_protos.workspace = true
log.workspace = true
win_dbg_logger.workspace = true
tokio-util.workspace = true
