[package]
name = "khiin_settings"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
khiin_windows = { path = "../ime" }

[dependencies.windows]
version = "0.48.0"

[build-dependencies]
embed-resource = "2.1.1"
